Fix output format and implement schema test